Add tikka masala image and recipe description

--- a/recipes/tikkamasala.html
+++ b/recipes/tikkamasala.html
@@ -8,5 +8,27 @@
 </head>
 <body>
     <h1>Tikka Masala</h1>
-</body>
+    <img src = '../img/tikkamasala.jpeg' alt = 'Bowl of chicken tikka masala'>
+    <h3>Description</h3>
+    <p>Chicken tikka masala is a dish consisting of roasted marinated chicken chunks (chicken tikka) in a spiced sauce. The sauce is usually creamy and orange-coloured.</p> 
+    
+    <p>The dish was popularised by cooks from India living in Great Britain and is offered at restaurants around the world. </p>
+
+    <h3>Ingredients</h3>
+    <ul>Chicken</ul>
+    <ul>Yogurt</ul>
+    <ul>Cream</ul>
+    <ul>Tomato</ul>
+    <ul>Onion</ul>
+    <ul>Garlic</ul>
+    <ul>Ginger</ul>
+    <ul>Chili Pepper</ul>
+
+    <h3>Steps</h3>
+    <ol>Marinate chicken in yogurt and spices for 4-12 hours ahead of meal</ol>
+    <ol>Saute chicken in steel saute pan, making sure to fully brown and get a good fond going</ol>
+    <ol>After chicken reaches temperature, mix in onions, garlic, and spices to saute and soak up fond.</ol>
+    <ol>Mix in cream, tomato, and reduce by simmering</ol>
+    <ol>Add back chicken and consume!</ol>
+    
 </html>
