--- a/recipes/tikkamasala.html
+++ b/recipes/tikkamasala.html
@@ -15,20 +15,23 @@
     <p>The dish was popularised by cooks from India living in Great Britain and is offered at restaurants around the world. </p>
 
     <h3>Ingredients</h3>
-    <ul>Chicken</ul>
-    <ul>Yogurt</ul>
-    <ul>Cream</ul>
-    <ul>Tomato</ul>
-    <ul>Onion</ul>
-    <ul>Garlic</ul>
-    <ul>Ginger</ul>
-    <ul>Chili Pepper</ul>
+    <ul>
+        <li>Chicken</li>
+        <li>Yogurt</li>
+        <li>Cream</li>
+        <li>Tomato</li>
+        <li>Onion</li>
+        <li>Garlic</li>
+        <li>Ginger</li>
+        <li>Chili Pepper</li>
+    </ul>   
 
     <h3>Steps</h3>
-    <ol>Marinate chicken in yogurt and spices for 4-12 hours ahead of meal</ol>
-    <ol>Saute chicken in steel saute pan, making sure to fully brown and get a good fond going</ol>
-    <ol>After chicken reaches temperature, mix in onions, garlic, and spices to saute and soak up fond.</ol>
-    <ol>Mix in cream, tomato, and reduce by simmering</ol>
-    <ol>Add back chicken and consume!</ol>
-    
+    <ol>
+        <li>Marinate chicken in yogurt and spices for 4-12 hours ahead of meal</li>
+        <li>Saute chicken in steel saute pan, making sure to fully brown and get a good fond going</li>
+        <li>After chicken reaches temperature, mix in onions, garlic, and spices to saute and soak up fond.</li>
+        <li>Mix in cream, tomato, and reduce by simmering</li>
+        <li>Add back chicken and consume!</li>
+    </ol>
 </html>
