Add grilled cheese recipe - copy tikka masala structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/tikkamasala.html">Tikka Masala</a>
+    <ur>
+        <li><a href="recipes/tikkamasala.html">Tikka Masala</a></li>
+        <li><a href="recipes/grilledcheese.html">Grilled Cheese</a></li>
+        <li><a href="recipes/butterbastedsteak.html">Butter Basted Steak</a></li>
+    </ur>   
 </body>
 </html>
