Modify butter basted steak recipe to include ghee as the cooking fat

--- a/recipes/butterbastedsteak.html
+++ b/recipes/butterbastedsteak.html
@@ -24,7 +24,7 @@
     <h3>Steps</h3>
     <ol>
         <li>Salt steak generously 4-24 hours before cooking.</li>
-        <li>Heat pan to medium high heat. Cast iron is best.</li>
+        <li>Heat pan to medium high heat. Cast iron is best. Add ghee for the lowest smoke point</li>
         <li>Pat steak dry to remove moisture. Place steak on pan and brown one side well</li>
         <li>Flip steak and brown the other side maybe 5 more minutes</li>
         <li>Reduce heat to low, add unsalted butter and garlic cloves to pan to lower the temperature slightly</li>
