Style using css for the first time
Add style elements using css to site. Site previous had basic html
elements with no basic styles applied. Add external stylesheet style.css
in main folder.

--- a/recipes/butterbastedsteak.html
+++ b/recipes/butterbastedsteak.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Butter Basted Steak</title>
+    <link rel="stylesheet", href = "../style.css">
 </head>
 <body>
     <h1>Butter Basted Steak</h1>
     <img src = '../img/butter-basted-pan-seared-steaks-recipe-hero-06-03b1131c58524be2bd6c9851a2fbdbc3.jpg' alt = 'Thinly sliced medium rare steak with sauteed onions'>
     <h3>Description</h3>
-    <p>Steak sauteed in a pan is maybe the simplest way of preparing a steak. To bring this method to the next level, butter basting can be used to infuse the meat with rich, garlic butter flavor in every bite</p> 
+    <p class = "fancy">Steak sauteed in a pan is maybe the simplest way of preparing a steak. To bring this method to the next level, butter basting can be used to infuse the meat with rich, garlic butter flavor in every bite</p> 
 
     <h3>Ingredients</h3>
     <ul>
