--- a/recipes/grilledcheese.html
+++ b/recipes/grilledcheese.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grilled Cheese</title>
+    <link rel="stylesheet", href = "../style.css">
 </head>
 <body>
     <h1>Grilled Cheese</h1>
@@ -21,7 +22,7 @@
     </ul>   
 
     <h3>Steps</h3>
-    <ol>
+    <ol class = "fancy">
         <li>Spread butter on one side of each piece of bread</li>
         <li>Place one piece of bread butter side down in a hot pan</li>
         <li>Place shredded cheese on top of bread in an even layer</li>
