--- a/recipes/tikkamasala.html
+++ b/recipes/tikkamasala.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tikka Masala</title>
+    <link rel="stylesheet", href = "../style.css">
 </head>
 <body>
     <h1>Tikka Masala</h1>
     <img src = '../img/tikkamasala.jpeg' alt = 'Bowl of chicken tikka masala'>
     <h3>Description</h3>
-    <p>Chicken tikka masala is a dish consisting of roasted marinated chicken chunks (chicken tikka) in a spiced sauce. The sauce is usually creamy and orange-coloured.</p> 
+    <p class = "fancy">Chicken tikka masala is a dish consisting of roasted marinated chicken chunks (chicken tikka) in a spiced sauce. The sauce is usually creamy and orange-coloured.</p> 
     
-    <p>The dish was popularised by cooks from India living in Great Britain and is offered at restaurants around the world. </p>
+    <p class = "fancy">The dish was popularised by cooks from India living in Great Britain and is offered at restaurants around the world. </p>
 
     <h3>Ingredients</h3>
     <ul>
