Add basic css to tikkamasala

--- a/recipes/tikkamasala.html
+++ b/recipes/tikkamasala.html
@@ -13,7 +13,7 @@
     <h3>Description</h3>
     <p class = "fancy">Chicken tikka masala is a dish consisting of roasted marinated chicken chunks (chicken tikka) in a spiced sauce. The sauce is usually creamy and orange-coloured.</p> 
     
-    <p class = "fancy">The dish was popularised by cooks from India living in Great Britain and is offered at restaurants around the world. </p>
+    <p>The dish was popularised by cooks from India living in Great Britain and is offered at restaurants around the world. </p>
 
     <h3>Ingredients</h3>
     <ul>
